Fix ESMO page cal icon spacing

--- a/wp-content/themes/conall-child/src/scss/pages/esmo2023.scss
+++ b/wp-content/themes/conall-child/src/scss/pages/esmo2023.scss
@@ -36,33 +36,17 @@ div#esmo_23_hero_row {
                         display: flex;
                         justify-content: center;
                         align-items: center;
-                        a {
-                            display: flex;
-                            color: $white;
-                            transition: all 0.25s;
                             img#cal-icon {
                                 height: 28px;
                                 width: 30px;
                                 margin-left: 15px;
                                 margin-right: 15px;
                                 position: relative;
-                                top: 6px;
+                                top: 2px;
                             }
-                        }
-                        a:hover {
-                            color: $elevar_yellow;
-                            transition: all 0.45s;
-                            img#cal-icon:hover {
-                                content: url('/wp-content/themes/conall-child/images/cal_icon_28x30-hover.svg');
-                                height: 28px;
-                                width: 30px;
-                                position: relative;
-                                transform: scale(1.25);
-                                transition: all 0.45s;
-                            }
-                        }
                     }
                 }
+
                 div#esmo-date-mobile {
                     display: none;
                 }
@@ -378,13 +362,11 @@ div#hubspot-container-row.elevar-section {
                         display: flex;
                         justify-content: center;
                         align-items: center;
-                        a {
                             img#cal-icon {
                                 height: 27px;
                                 width: 25px;
-                                top: 4px;
+                                top: 2px;
                             }
-                        }
                     }
                 }
                 div#esmo-date:after {
@@ -584,14 +566,12 @@ div#hubspot-container-row.elevar-section {
                         display: flex;
                         justify-content: center;
                         align-items: center;
-                        a {
                             img#cal-icon {
                                 margin-left: 10px;
                                 margin-right: 10px;
                                 height: 20px;
-                                top: 5px;
+                                top: 0px;
                             }
-                        }
                     }
                 }
                 div#esmo-date:after {
@@ -815,9 +795,6 @@ div#hubspot-container-row.elevar-section {
                             display: inline-block;
                             padding: 0;
                             margin: 0;
-                            a {
-                                color: $white;
-                                transition: all 0.25s;
                                 img#cal-icon {
                                     margin-left: 8px;
                                     height: 24px;
@@ -826,19 +803,6 @@ div#hubspot-container-row.elevar-section {
                                     top: 6px;
                                     display: inline-block;
                                 }
-                            }
-                            a:hover {
-                                color: $elevar_yellow;
-                                transition: all 0.45s;
-                                img#cal-icon:hover {
-                                    content: url('/wp-content/themes/conall-child/images/cal_icon_28x30-hover.svg');
-                                    height: 24px;
-                                    width: 22px;
-                                    position: relative;
-                                    transform: scale(1.25);
-                                    transition: all 0.45s;
-                                }
-                            }
                         }
                     }
                     div.container-date-bottom {
@@ -1078,9 +1042,6 @@ div#hubspot-container-row.elevar-section {
                         }
                         p.date-icon {
                             display: inline-block;
-                            a {
-                                color: $white;
-                                transition: all 0.25s;
                                 img#cal-icon {
                                     margin-left: 8px;
                                     height: 24px;
@@ -1089,19 +1050,6 @@ div#hubspot-container-row.elevar-section {
                                     top: 6px;
                                     display: inline-block;
                                 }
-                            }
-                            a:hover {
-                                color: $elevar_yellow;
-                                transition: all 0.45s;
-                                img#cal-icon:hover {
-                                    content: url('/wp-content/themes/conall-child/images/cal_icon_28x30-hover.svg');
-                                    height: 24px;
-                                    width: 22px;
-                                    position: relative;
-                                    transform: scale(1.25);
-                                    transition: all 0.45s;
-                                }
-                            }
                         }
                     }
                     div.container-date-bottom {
@@ -1323,27 +1271,12 @@ div#hubspot-container-row.elevar-section {
                             }
                             p.date-icon {
                                 display: inline-block;
-                                a {
                                     img#cal-icon {
                                         margin-left: 8px;
                                         height: 20px;
                                         width: 18px;
-
-                                        top: 3px;
+                                        top: 4px;
                                     }
-                                }
-                                a:hover {
-                                    color: $elevar_yellow;
-                                    transition: all 0.45s;
-                                    img#cal-icon:hover {
-                                        content: url('/wp-content/themes/conall-child/images/cal_icon_28x30-hover.svg');
-                                        height: 24px;
-                                        width: 22px;
-                                        position: relative;
-                                        transform: scale(1.25);
-                                        transition: all 0.45s;
-                                    }
-                                }
                             }
                         }
                         div.container-date-bottom {
